Trying to logically cluster commands in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,11 @@ jobs:
       version: 3.6.1
     steps:
       - checkout
-      - run: sudo apt-get update; sudo apt-get install build-essential libsnappy-dev
+      - run: 
+        name: Install build essentials
+        command:
+          - sudo apt-get update
+          - sudo apt-get install build-essential libsnappy-dev
       - run: mkdir ~/leveldb; cd ~/leveldb; git clone https://github.com/google/leveldb.git; cd leveldb/; make;
       - run: sudo scp ~/leveldb/leveldb/out-static/lib* ~/leveldb/leveldb/out-shared/lib* /usr/local/lib/
       - run: cd ~/leveldb/leveldb/include/; sudo scp -r leveldb /usr/local/include/; sudo ldconfig
