--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Install build essentials
           command: |
             sudo apt-get update
-            sudo apt-get install -y build-essential libsnappy-dev libleveldb-dev
+            sudo apt-get install -y build-essential libsnappy-dev libleveldb-dev redis-server
 
       - run:
           name: Set Git credentials
@@ -26,6 +26,7 @@ jobs:
       - run:
           name: Run unit and coverage tests
           command: |
+            redis-server &
             pytest --cov=lmcommon .
             coveralls
 
