Properly Type all lmcommon packages and integrate into CI (#39)
* Adding addtional typing annotations

* Further typing into Note Store

* All typing checks pass

* Removed indexing on OrderedDict type hints

* Added a type: ignore to mute a mypy error

* Changes to CircleCI to support using mypy

* Additional typing and annotations

* Got started with folding dicts in lmcommon

* Folded up dict into JobStatus object in Dispatcher

* Fixed all typing errors in Dispatcher

* Better type checking in ImageBuilder

* Got unit tests working in dispatcher after refactors

* Added some typing annotations to note_store

* Added some new fields to JobKey

* Fixed type error in imagebuilder

* update typing in labbook.py to all pass mypy check

* Added additional typing to methods in labbook.py

* Replaced assertion with ValueError in imagebuilder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs:
             sudo pip install coveralls pytest-cov
 
       - run:
+          name: Run mypy type checker
+          command: |
+            python -m mypy . --ignore-missing-imports --strict-optional
+      - run:
           name: Run unit and coverage tests
           command: |
             redis-server &
