Export and Import Labbooks via jobs.py (#42)
* Added exporter

* Added export/import for labbook in jobs.py. Still need to add tests

* Added some new unit tests

* Fixed some tests

* Fixed unit tests

* Making gigantum directory in home for circleci

* Skip docker build if in circleci

* Moved circleci check a line earleir

* Removed default arguments for import_labbook_from_zip

* Got rid of un-necessary or syntax

* Added test to make sure new labbook cannot be named export

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
           command: |
             sudo pip install -r requirements.txt
             sudo pip install coveralls pytest-cov
+            mkdir /home/circleci/gigantum
 
       - run:
           name: Run mypy type checker
