--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Install build essentials
           command: |
             sudo apt-get update
-            sudo apt-get install -y build-essential libsnappy-dev libleveldb-dev redis-server
+            sudo apt-get install -y build-essential redis-server
 
       - run:
           name: Set Git credentials
