Automate GitLab user creation, local git credential config, bug fixes (#87)
* add hook to create user in gitlab if missing

* fix error while getting admin_service key

* Configure git credentia;s and add remote origin

* fix token extraction and remote configuration

* add sweep on git check fail for now

* handle EOF condition when parsing git credential

* initial bug fix - still needs to be cleaned up

* set working dir to giguser home dir before git credential operations

* mirror git configuration from containers in CircleCI

* log username when creating user in remote git server

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
             sudo apt-get install -y build-essential redis-server
 
       - run:
-          name: Set Git credentials
-          command: git config --global user.email "noreply@gigantum.io" && git config --global user.name "CircleCI"
+          name: Set Git credentials config
+          command: git config --global user.email "noreply@gigantum.io" && git config --global user.name "CircleCI" && git config --global credential.helper store
 
       - run:
           name: Pip install requirements and pytest
