(GIG-1169) Automatically add user to cloud repository on login (#151)
* Add method to auto-add user to cloud repo on first login
* add tests for auto user create workflow
* mock import since demo file does not exist in circleCI
* create working dir in circleci for import mock

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,10 @@ jobs:
           command: bash /home/circleci/project/.circleci/write_auth.sh
 
       - run:
+          name: Set up working dir, required for import mocks
+          command: sudo mkdir -p /mnt/gigantum && sudo chown -R circleci:circleci /mnt/gigantum
+
+      - run:
           name: Run unit and coverage tests
           command: |
             redis-server &
