--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,14 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.1
-    python:
-      version: 3.6.1
+      - image: gigantum/circleci-common:423e3e76-2018-03-29
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Install build essentials
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y build-essential redis-server 
 
       - run:
           name: Set Git credentials config
           command: git config --global user.email "noreply@gigantum.io" && git config --global user.name "CircleCI" && git config --global credential.helper store
-
-      - run:
-          name: Pip install requirements and pytest
-          command: |
-            sudo pip install -r requirements.txt
-            sudo pip install coveralls pytest-cov
-            mkdir /home/circleci/gigantum
 
       - run:
           name: Run mypy type checker
@@ -33,10 +19,6 @@ jobs:
       - run:
           name: Set authentication credentials
           command: bash /home/circleci/project/.circleci/write_auth.sh
-
-      - run:
-          name: Set up working dir, required for import mocks
-          command: sudo mkdir -p /mnt/gigantum && sudo chown -R circleci:circleci /mnt/gigantum
 
       - run:
           name: Run unit and coverage tests
