--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pytest
-pyyaml
-GitPython
+pyyaml==3.12
+GitPython==2.1.8
 docker==2.5.1
 redis==2.10.6
 python-redis-lock==3.2.0
@@ -16,6 +15,7 @@ pexpect==4.3.1
 natsort==5.1.1
 
 # Testing support
+pytest==3.5.0
 mock==2.0.0
 mockredispy==2.9.3
 mypy==0.521
