--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,14 @@ docker==2.5.1
 redis==2.10.6
 python-redis-lock==3.2.0
 rq==0.8.1
-jupyter==1.0.0
+jupyter_client==5.2.3
+ipykernel==4.8.2
 hiredis==0.2.0
 requests==2.18.3
 rq-scheduler==0.7.0
-python-jose==1.4.0
+python-jose[cryptography]==3.0.0
 schema==0.6.6
 blosc==1.5.1
 pexpect==4.3.1
 natsort==5.1.1
 pillow==5.1.0
-
-# Testing support
-pytest==3.5.0
-mock==2.0.0
-mockredispy==2.9.3
-mypy==0.521
-responses==0.8.1
