GIG-1825: Use ID Token instead of API call and fix identity caching issues (#222)
* use ID token instead of excessive API calls
* only update ID token if it’s the same user

--- a/lmcommon/auth/tests/auth_config.json.example
+++ b/lmcommon/auth/tests/auth_config.json.example
@@ -5,5 +5,5 @@
   "audience": "TEST_API_AUDIENCE",
   "client_id": "CLIENT_ID",
   "client_secret": "CLIENT_SECRET",
-  "scope": "openid"
+  "scope": "openid profile email user_metadata"
 }
